--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,14 +1,28 @@
-/* ============= Other Styles =========== */
+/* ============= Header ============= */
+
 h1 {
+	margin: 5px;
+	min-width: 550px;
+	border-bottom: 5px solid black;
+	border-top: 5px solid black;
+}
+
+#profile {
+	display: inline-block;
+	padding: 15px 0px 0px 0px;
+}
+
+#title {
+	display: inline-block;
+	align-content: middle;
 	font-family: Courier;
 	font-weight: bold;
 	font-size: 50px;
 	text-align: left;
-	border: 5px solid black;
-	padding: 10px 15px;
-	margin: 5px;
-	min-width: 550px;
+	padding: 15px 0px 0px 15px;
 }
+
+/* =========== Other Styles ============ */
 
 h2 {
 	font-family: Courier;
@@ -45,9 +59,15 @@ a {
 	color: blue;
 }
 
-img {
-	border: 3px solid black;
+img, video {
+	display: inline-block;
 }
+
+main {
+	min-height: 345px;
+}
+
+/* ============= Geometric Partitions ============ */
 
 .split {
 	height: 100%;
@@ -66,6 +86,17 @@ img {
 	float: right;
 }
 
-.pad_li {
-	padding: 5px 0px;
+.left_tri {
+	width: 33%;
+	float: left;
+}
+
+.middle_tri {
+	width: 33%;
+	float: middle;
+}
+
+.right_tri {
+	width: 33%;
+	float: right;
 }
