Added Dark Mode + Profile Links
Dark Mode button is located in the top right corner of the page.  Profile Links are the icons to the left of the Dark Mode button.

--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -14,10 +14,24 @@ h1 {
 
 #title {
 	display: inline-block;
-	align-content: middle;
 	font-family: Courier;
 	font-weight: bold;
 	font-size: 50px;
 	text-align: left;
 	padding: 15px 0px 0px 15px;
+}
+
+.headbutton {
+	float: right;
+	font-family: Courier;
+	padding: 10px;
+}
+
+.header-dark {
+	margin: 5px;
+	min-width: 550px;
+	border-bottom: 5px solid white;
+	border-top: 5px solid white;
+	color: white;
+	background-color: black;
 }
